2009-06-01  Michael Miousse

	* Added feature: possiblility to add uri at the end of an url for the cas server. We can now create url like localhost:8080/cas

2009-02-23  Michael Miousse

	* Fixed bug #2532: Missing dependency of iglib extension

2009-01-29  Michael Miousse

	* Initial Commit